--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,13 +2,6 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Taviraj:300,400,700,300i,400i,700i");
 
-/*
-	Transitive by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-*/
-
-/* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
@@ -1831,7 +1824,7 @@
 
 /* Button */
 
-	input[type="submit"],
+	/*input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
 	button,
@@ -1849,7 +1842,7 @@
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 400;
-		/*height: 2.85rem;*/
+		height: 2.85rem;
 		line-height: 2.95rem;
 		padding: 0 1.5rem;
 		text-align: center;
@@ -1914,9 +1907,9 @@
 			-ms-pointer-events: none;
 			pointer-events: none;
 			opacity: 0.25;
-		}
+		}*/
 
-		@media screen and (max-width: 480px) {
+/*		@media screen and (max-width: 480px) {
 
 			input[type="submit"],
 			input[type="reset"],
@@ -2011,7 +2004,7 @@
 			.button.special:active {
 				background-color: #439aea;
 			}
-
+*/
 /* Form */
 
 	form {
@@ -2470,6 +2463,12 @@
 
 					ul.actions.fit.small li {
 						padding: 0 0 0 0.5rem;
+					}
+
+					@media (max-width: 1100px){
+						.image.fit img {
+				width: 100vw;
+			}
 					}
 
 			@media screen and (max-width: 480px) {
@@ -3919,9 +3918,9 @@
 			flex-grow: 0;
 		}
 
-		#flexgrid > * {
+		/*#flexgrid > * {
 			width: 25%;
-		}
+		}*/
 
 		#flexgrid > * {
 			padding: 3rem;
@@ -3969,7 +3968,7 @@
 				border-top-width: 0;
 			}
 
-			#flexgrid > div .icon {
+			/*#flexgrid > div .icon {
 				display: -moz-flex;
 				display: -webkit-flex;
 				display: -ms-flex;
@@ -3989,9 +3988,9 @@
 				height: 8rem;
 				border-radius: 100%;
 				margin: 0 auto 2rem auto;
-			}
+			}*/
 
-		@media screen and (max-width: 980px) {
+		@media screen and (max-width: 1100px) {
 
 			#flexgrid > * {
 				width: 100%;
@@ -4105,7 +4104,7 @@
 
 		}
 
-	.grid-style {
+/*	.grid-style {
 		width: 100%;
 		margin: 0 0 2.5rem 0;
 		display: -moz-flex;
@@ -4226,7 +4225,8 @@
 				width: calc(100% + 2rem);
 			}
 
-		}
+		}*/
+
 
 
 /*new css*/
