--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -781,6 +781,8 @@
 	width:20%;
 	background-color: red;
 	overflow: hidden;
+
+
 }
 
 #teamwork
@@ -805,6 +807,45 @@
   padding: 0;
 }
 
+@media (max-width: 750px){
+	.team{
+		width:35%;
+		margin-left: 10%;
+	}
+}
 
+@media (max-width: 450px){
+	.team{
+		width:70%;
+		margin-left: 15%;
+	}
+
+}
+
+footer h1{
+	 text-align: center;
+	 font-size: 6em;
+	 font-family:Times New Roman;
+}
+
+@media (max-width: 750px){
+
+footer h1{
+	font-size: 2.5em;
+
+}
+}
+
+.footer_p{
+	font-size:4em;
+	text-align:center;
+	font-family:Times New Roman;
+}
+
+@media (max-width: 750px){
+	.footer_p{
+	font-size:2.5em;
+}
+}
 
          
