--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -844,8 +844,81 @@ footer h1{
 
 @media (max-width: 750px){
 	.footer_p{
-	font-size:2.5em;
+	font-size:2em;
 }
 }
+
+/*All section header*/
+
+.main{
+        		background-image: url(../../images/bgm.jpg);
+        		background-size: cover;
+            height: 40vh;
+        	}
+
+        	#flexgrid a{
+        		text-decoration: none;
+        	}
+        	
+        	#events h1{
+        		padding:0 0 3rem 0;
+        		text-align: center;
+        		color: #000;
+        		background-color: #f2f2f2;
+        	}
+
+        	@media (max-width: 450px){
+        		#events h1{
+        		padding:0 0 1rem 0;
+        		font-size: 20px;
+        	}
+        	}
+
+          #reg_act h1{
+            padding:3rem 0 3rem 0;
+            text-align: center;
+            color: #000;
+            background-color: #f2f2f2;
+          }
+
+          @media (max-width: 450px){
+        		#reg_act h1{
+        		padding:1rem 0 1rem 0;
+        		font-size: 20px;
+        	}
+        	}
+
+          #le_sanskrit h1{
+            padding:3rem 0 3rem 0;
+            text-align: center;
+            color: #000;
+            background-color: #f2f2f2;
+          }
+
+          @media (max-width: 450px){
+        		#le_sanskrit h1{
+        		padding:1rem 0 1rem 0;
+        		font-size: 20px;
+        	}
+        	}
+
+          #library h1{
+            padding:3rem 0 3rem 0;
+            text-align: center;
+            color: #000;
+            background-color: #f2f2f2;
+          }
+
+          @media (max-width: 450px){
+        		#library h1{
+        		padding:1rem 0 1rem 0;
+        		font-size: 20px;
+        	}
+        	}
+
+          #library {
+            padding-bottom:3rem;
+          }
+
 
          
